--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -8,6 +8,8 @@
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
 <body>
-  <h1> It Works! </h1>
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
 </body>
 </html>
