navbar, card pos

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
 
   <div class="w-full">
-    <nav class="bg-gray-800">
+    <nav class="bg-primary">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
           <!-- Mobile menu button -->
@@ -31,15 +31,14 @@
 
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
             <div class="flex flex-shrink-0 items-center">
-              <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
+              <img class="h-10 w-auto" src="/images/logo.webp" alt="Eraspace">
             </div>
             <div class="hidden sm:ml-6 sm:block">
               <div class="flex space-x-4">
                 <!-- Navigation Links -->
-                <a href="#" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">Dashboard</a>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Team</a>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</a>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Calendar</a>
+                <a href="#" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">POS</a>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">E-Commerce</a>
+                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dealer Portal</a>
               </div>
             </div>
           </div>
@@ -48,7 +47,7 @@
             <!-- Profile Dropdown -->
             <div class="relative ml-3">
               <div>
-                <button type="button" id="user-menu-button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+                <button type="button" id="user-menu-button" class="relative flex rounded-full bg-navbar text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
                   <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="User Image">
                 </button>
               </div>
@@ -72,6 +71,59 @@
         <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Calendar</a>
       </div>
     </nav>
+  </div>
+
+  <div class="container mx-auto px-4 py-4">
+    <div class="flex flex-row">
+      <div class="basis-1/4 md:basis-1/3">
+        <div class="flex items-center justify-center">
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              OAA
+            </div>
+
+            <!-- Card Body -->
+            <div class="p-6">
+              <p class="text-gray-700 text-base">
+                This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="basis-1/4 md:basis-1/3">
+        <div class="flex items-center justify-center">
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              OPP
+            </div>
+
+            <!-- Card Body -->
+            <div class="p-6">
+              <p class="text-gray-700 text-base">
+                This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="basis-1/2 md:basis-1/3">
+        <div class="flex items-center justify-center">
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              Kafka
+            </div>
+
+            <!-- Card Body -->
+            <div class="p-6">
+              <p class="text-gray-700 text-base">
+                This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
