--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -74,59 +74,138 @@
   </div>
 
   <div class="container mx-auto px-4 py-4">
-  <div class="flex flex-wrap">
-    <!-- Card 1 -->
-    <div class="w-full md:w-1/3 mb-5">
-      <div class="flex items-center justify-center">
-        <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-          <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
-            OAA
-          </div>
-          <!-- Card Body -->
-          <div class="p-6">
-            <p class="text-gray-700 text-base">
-              This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
-            </p>
+    <div class="flex flex-wrap">
+      <!-- Card 1 -->
+      <div class="w-full md:w-1/3 mb-5">
+        <div>
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              OAA
+            </div>
+            <!-- Card Body -->
+            <div class="p-6">
+              <div class="flex items-center">
+                  <div class="flex-1">
+                      <p class="text-2xl inline-flex items-center text-primary font-semibold">
+                         0.002s
+                      </p>
+                      <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                        Query Imei
+                      </p>
+                  </div>
+                  <div class="inline-flex items-center text-primary font-semibold">
+                    <button
+                      type="button"
+                      class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                      Detail
+                    </button>
+                  </div>
+              </div>
+              <hr class="my-4">
+              <div class="flex items-center">
+                <div class="flex-1">
+                    <p class="text-2xl inline-flex items-center text-primary font-semibold">
+                        0.254s
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      Check Stock
+                    </p>
+                </div>
+                <div class="inline-flex items-center text-primary font-semibold">
+                  <button
+                    type="button"
+                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                    Detail
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    <!-- Card 2 -->
-    <div class="w-full md:w-1/3 mb-5">
-      <div class="flex items-center justify-center">
-        <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-          <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
-            OPP
-          </div>
-          <!-- Card Body -->
-          <div class="p-6">
-            <p class="text-gray-700 text-base">
-              This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
-            </p>
+      
+      <!-- Card 2 -->
+      <div class="w-full md:w-1/3 mb-5">
+        <div>
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              OPP
+            </div>
+            <!-- Card Body -->
+            <div class="p-6">
+              <div class="flex items-center">
+                <div class="flex-1">
+                    <p class="text-2xl inline-flex items-center text-primary font-semibold">
+                        0.222s
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      OPP Item
+                    </p>
+                </div>
+                <div class="inline-flex items-center text-primary font-semibold">
+                  <button
+                    type="button"
+                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                    Detail
+                  </button>
+                </div>
+              </div>
+              <hr class="my-4">
+              <div class="flex items-center">
+                <div class="flex-1">
+                    <p class="text-2xl inline-flex items-center text-primary font-semibold">
+                        0.125s
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      OPP Checkout
+                    </p>
+                </div>
+                <div class="inline-flex items-center text-primary font-semibold">
+                  <button
+                    type="button"
+                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                    Detail
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    <!-- Card 3 -->
-    <div class="w-full md:w-1/3 mb-5">
-      <div class="flex items-center justify-center">
-        <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-          <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
-            Kafka
-          </div>
-          <!-- Card Body -->
-          <div class="p-6">
-            <p class="text-gray-700 text-base">
-              This is the card body. Tailwind CSS allows you to easily style this card with utility classes for padding, margin, background colors, and more.
-            </p>
+      
+      <!-- Card 3 -->
+      <div class="w-full md:w-1/3 mb-5">
+        <div>
+          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+              Kafka
+            </div>
+            <!-- Card Body -->
+            <div class="p-6">
+              <div class="flex items-center">
+                <div class="flex-1">
+                    <p class="text-2xl inline-flex items-center text-primary font-semibold">
+                        0.763s
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      Kafka
+                    </p>
+                </div>
+                <div class="inline-flex items-center text-primary font-semibold">
+                  <button
+                    type="button"
+                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
+                    Detail
+                  </button>
+                </div>
+              </div>
+              <hr class="my-4">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
   <script>
