--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -19,4 +20,11 @@ body {
 }
 .text-primary {
   color: rgb(0, 58, 119);
+}
+.text-danger {
+  color: rgb(235 33 40/var(--tw-bg-opacity));
+}
+
+.text-success {
+  color: #41d001;
 }
