oaa check stock

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -91,7 +91,7 @@
                       <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                     </div>
                 </div>
-                <div class="flex-1" id="id-oaa-queryimei">
+                <div class="flex-1">
                     <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_queryimei">
                         0s
                     </p>
@@ -110,13 +110,13 @@
               <hr class="my-4">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                    <p class="text-success font-semibold">
-                      <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
-                    </p>
+                  <div id="div_oaa_checkstock_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
+                  </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold">
-                        0.254s
+                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_checkstock">
+                        0s
                     </p>
                     <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                       Check Stock
@@ -147,7 +147,7 @@
               <div class="flex items-center">
                 <div class="flex mr-2">
                     <p class="text-danger font-semibold">
-                      <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
+                      <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
                     </p>
                 </div>
                 <div class="flex-1">
@@ -170,7 +170,7 @@
               <div class="flex items-center">
                 <div class="flex mr-2">
                     <p class="text-success font-semibold">
-                      <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
+                      <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
                     </p>
                 </div>
                 <div class="flex-1">
@@ -206,7 +206,7 @@
               <div class="flex items-center">
                 <div class="flex mr-2">
                     <p class="text-success font-semibold">
-                      <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
+                      <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
                     </p>
                 </div>
                 <div class="flex-1">
