--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -75,6 +75,11 @@
   </div>
 
   <div class="container mx-auto px-4 py-4">
+
+
+    <div class="my-5">
+      <span id="date_time_now" class="text-primary text-xl"></span>
+   </div>
     <div class="flex flex-wrap">
       <!-- Card 1 -->
       <div class="w-full md:w-1/3 mb-5">
