--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -151,13 +151,13 @@
             <div class="p-6">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                    <p class="text-danger font-semibold">
-                      <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
-                    </p>
+                  <div id="div_opp_item_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
+                  </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-danger font-semibold">
-                        2.222s
+                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_opp_item">
+                        0s
                     </p>
                     <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                       OPP Item
