--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -78,7 +78,7 @@
 
 
     <div class="my-5">
-      <span id="date_time_now" class="text-primary text-xl"></span>
+      <span id="date_time_now" class="text-primary text-md"></span>
    </div>
     <div class="flex flex-wrap">
       <!-- Card 1 -->
@@ -174,13 +174,13 @@
               <hr class="my-4">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                    <p class="text-success font-semibold">
-                      <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
-                    </p>
+                  <div id="div_opp_checkout_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
+                  </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold">
-                        0.125s
+                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_opp_checkout">
+                        0s
                     </p>
                     <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                       OPP Checkout
